// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Should correctly render expenses summery with 1 expense 1`] = `
<div>
  <h1>
    Viewing 
    1
     
    expense
     totaling 
    $2.35
  </h1>
</div>
`;

exports[`Should correctly render expenses summery with multiple expenses 1`] = `
<div>
  <h1>
    Viewing 
    23
     
    expenses
     totaling 
    $235,123,344.41
  </h1>
</div>
`;
